# Quoridor

./: .gitignore  AiWorker.js  CMakeLists.txt  CMakePresets.json  CNAME  README.md  __vite-browser-external-DCQfrJcx.js  deploy_to_github_pages.yaml  emscripten_setup.bat  emscripten_setup.sh  eslint.config.js  game_manager.h  index.html  index.js  move.c  move_generation.c  package-lock.json  package.json  search.c  search.h  state.h  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml  deploy_to_github_pages
assets/: Quoridor-MNXvxCZF.wasm  Quoridor-aLHVxZ2H.wasm  index-BAA9h3fL.css  index-CUIAxOfL.css
src/: App.tsx  bitboards.c  bitboards.h  game_manager.c  game_manager.h  main.c  move.c  move_generation.c  move_generation.h  state.c  state.h  wasm_util.c
src/assets/: ArrowLeftDoubleIcon.tsx  ArrowLeftIcon.tsx  ArrowRightDoubleIcon.tsx  ArrowRightIcon.tsx  GameControllerIcon.tsx  MoonIcon.tsx  SunIcon.tsx
src/c/: evaluate.c  evaluate.h  main.c  move.h  move_generation.c  search.c  state.h  wasm_util.h
src/components/: ConfettiEffect.tsx
src/components/BoardSquare/: BoardSquare.module.scss  BoardSquare.tsx
src/components/Fence/: Fence.module.scss  Fence.tsx
src/components/GameBoard/: GameBoard.module.scss  GameBoard.tsx
src/components/GameBoardControls/: GameBoardControls.module.scss  GameBoardControls.tsx
src/components/Modal/: NewGameModal.module.scss  NewGameModal.tsx
src/components/Pawn/: Pawn.tsx
src/components/ThemeToggleButton/: ThemeToggleButton.module.scss  ThemeToggleButton.tsx
src/logic/: Move.ts  MoveSet.ts  Player.ts  State.ts  WasmUtils.ts
src/styles/: main.scss
src/workers/: AiWorker.ts
